Add removing profile feature
